# genetic_algorithm

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  main.c
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_and_test.yml  docs.yml
app_init/: app_init.c  app_init.h
genetic_algorithm/: genetic_algorithm.c  genetic_algorithm.h
genetic_algorithm_utils/: genetic_algorithm_utils.c  genetic_algorithm_utils.h
include/: CMakeLists.txt  genetic_algorithm.c  genetic_algorithm.h
test/: CMakeLists.txt  test_genetic_algorithm.c
